<?xml version="1.0" encoding="utf-8"?>
<com.clinkod.kabarak.ui.radiobutton.CustomRadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_custom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_marginTop="0dp"
        android:id="@+id/layoutTitle"
        android:background="@color/primaryColor"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/measure_period"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/first_question"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/layoutTitle"
        android:text="@string/formulary_first_question"
         />

    <com.clinkod.kabarak.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/fivemin"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/frequency"
        app:layout_constraintEnd_toStartOf="@+id/fifteenmin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_question"
        app:title_rb_two_fields="@string/five_min" />

    <com.clinkod.kabarak.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/fifteenmin"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/frequency"
        app:layout_constraintBottom_toBottomOf="@id/fivemin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fivemin"
        app:title_rb_two_fields="@string/fteen_min" />

    <com.clinkod.kabarak.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/thirtymin"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/frequency"
        app:layout_constraintEnd_toStartOf="@+id/fourtyfivemin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fivemin"
        app:title_rb_two_fields="@string/thirty_min" />

    <com.clinkod.kabarak.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/fourtyfivemin"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/frequency"
        app:layout_constraintBottom_toBottomOf="@id/thirtymin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/thirtymin"
        app:title_rb_two_fields="@string/ftfive_min" />
    <com.clinkod.kabarak.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/onehr"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/frequency"
        app:layout_constraintEnd_toStartOf="@+id/twohr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thirtymin"
        app:title_rb_two_fields="@string/onehr_min" />

    <com.clinkod.kabarak.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/twohr"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/frequency"
        app:layout_constraintBottom_toBottomOf="@id/onehr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/onehr"
        app:title_rb_two_fields="@string/thr_min" />
    <com.clinkod.kabarak.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/threehr"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/frequency"
        app:layout_constraintEnd_toStartOf="@+id/fourhr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onehr"
        app:title_rb_two_fields="@string/threhr_min" />

    <com.clinkod.kabarak.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/fourhr"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/frequency"
        app:layout_constraintBottom_toBottomOf="@id/threehr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/threehr"
        app:title_rb_two_fields="@string/fourhr_min" />
    <com.clinkod.kabarak.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/fivehr"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/frequency"
        app:layout_constraintEnd_toStartOf="@+id/sixhr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fourhr"
        app:title_rb_two_fields="@string/fivehr_min" />

    <com.clinkod.kabarak.ui.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/sixhr"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/frequency"
        app:layout_constraintBottom_toBottomOf="@id/fivehr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/fivehr"
        app:title_rb_two_fields="@string/sixhr_min" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneConfirm"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_medium"
        android:text="Save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sixhr" />


</com.clinkod.kabarak.ui.radiobutton.CustomRadioGroup>